added the first week

--- a/modules/week-1/_posts/2017-01-09-homework.md
+++ b/modules/week-1/_posts/2017-01-09-homework.md
@@ -5,14 +5,11 @@ module: 1
 
 # Week 1 Homework
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/2wk_EHOLIkA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/NNFja-I8xI4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-Your homework for this week is to:
-
-1. Read the Syllabus and ask questions.
-2. Practice with your GUI folders and files.
-3. Create a GitHub.com account.
-4. Create an Issue in the course Issues.
-5. Respond to your fellow classmates _at least_ twice.
-6. Introduce yourself - put link on Moodle.
-7. Submit your GitHub repository link into Moodle.
+In this activity, you are going to experiment with your space game. Your main objective is to avoid the obstacles while attempting to collect all the collectables before you run out of health.
+1.	Add a background. It’s up to you what you put on there.
+2.	If you are hit, you should lose health. If you run out of health, the game should be over. You are to create at least five obstacles and they should either chase or patrol.
+3.	You should also have collectibles.  Each time you collect something your point total should increase.
+4.	There should be at least 5 collectibles as well.
+5.	If you collect everything, you should win.
