--- a/modules/week-1/_posts/2017-01-07-health.md
+++ b/modules/week-1/_posts/2017-01-07-health.md
@@ -5,7 +5,7 @@ module: 1
 
 # Health System
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/FxmA_j2hndk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<div class="embed-responsive embed-responsive-16by9"><iframe class="embed-responsive-item" src="" frameborder="0" allowfullscreen></iframe></div>
 
 Having obstacles and collisions are cool, but we need a way to determine if anything has happened if they collide.
 
