--- a/modules/week-1/_posts/2017-01-09-homework.md
+++ b/modules/week-1/_posts/2017-01-09-homework.md
@@ -5,7 +5,7 @@ module: 1
 
 # Week 1 Homework
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/NNFja-I8xI4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<div class="embed-responsive embed-responsive-16by9"><iframe class="embed-responsive-item" src="" frameborder="0" allowfullscreen></iframe></div>
 
 In this activity, you are going to experiment with your space game. Your main objective is to avoid the obstacles while attempting to collect all the collectables before you run out of health.
 1.	Add a background. It’s up to you what you put on there.
