--- a/modules/syllabus/_posts/2017-01-01-syllabus.md
+++ b/modules/syllabus/_posts/2017-01-01-syllabus.md
@@ -4,7 +4,6 @@ permalink: /:title/
 ---
 
 
-# Syllabus<br/>Creative Coding 1, MART 120
+# Syllabus<br/>Game Engines, MART 460
 
-<iframe src="https://moodle.umt.edu/pluginfile.php/1680177/mod_resource/content/2/MART%20120%20Fall%202019%20Syllabus%20Section%2000.pdf" height="100%" width="100%"></iframe>
-
+<div class="embed-responsive embed-responsive-16by9"><iframe class="embed-responsive-item" src="https://moodle.umt.edu/pluginfile.php/2086415/mod_resource/content/2/Fall%202020%20MART%20460%20Sec%201%20Syllabus%20Game.pdf" frameborder="0" allowfullscreen></iframe></div>
