--- a/modules/week-2/_posts/2017-01-10-homework.md
+++ b/modules/week-2/_posts/2017-01-10-homework.md
@@ -6,6 +6,8 @@ jotted: false
 
 # Week 2 Homework
 
+I know this is somewhat of a review for you, but it is to show that you can apply the same scripts from before (or ones that you create) to new projects.  It is meant to indicate that you do not need to recreate everything from scratch everytime you start a new project.
+
 For your homework this week, you will
 
 1. Create a new Project
