--- a/modules/week-2/_posts/2017-01-10-homework.md
+++ b/modules/week-2/_posts/2017-01-10-homework.md
@@ -1,17 +1,15 @@
 ---
 title: Homework
 module: 2
-jotted: false
 ---
 
 # Week 2 Homework
 
-I know this is somewhat of a review for you, but it is to show that you can apply the same scripts from before (or ones that you create) to new projects.  It is meant to indicate that you do not need to recreate everything from scratch everytime you start a new project.
+<div class="embed-responsive embed-responsive-16by9"><iframe class="embed-responsive-item" src="" frameborder="0" allowfullscreen></iframe></div>
 
-For your homework this week, you will
-
-1. Create a new Project
-2. Add new assets
-3. Apply existing scripts to assets
-4. Provide a document explaining how to play the game.
-5. Send all these files to your GitHub Repository and submit your link to Moodle.
+In this activity, you are going to experiment with your space game. Your main objective is to avoid the obstacles while attempting to collect all the collectables before you run out of health.
+1.	Add a background. It’s up to you what you put on there.
+2.	If you are hit, you should lose health. If you run out of health, the game should be over. You are to create at least five obstacles and they should either chase or patrol.
+3.	You should also have collectibles.  Each time you collect something your point total should increase.
+4.	There should be at least 5 collectibles as well.
+5.	If you collect everything, you should win.
