--- a/modules/week-3/_posts/2017-01-01-overview.md
+++ b/modules/week-3/_posts/2017-01-01-overview.md
@@ -5,7 +5,16 @@ module: 3
 
 # Week 3 Overview <br />
 
+## Design a new Game
 
-We will examine our thoughts on developing software and how it can apply in more areas in life than just this class.  We are going to start with a section on Grit based on a book I read recently called "Grit: The Power of Passion and Perseverance" by Angela Duckworth. It is an excellent book for you all to look through when you have free time. It works hand-in-hand with Mindset and looks at our "Grit," which is how much are we are willing to dig in and accomplish something.  Grit isn't always natural, which means we have to work on it.  
+This week we are going to look at how to create a new game from scratch. We will look at the Unity interface, revisit the Unity Asset store, and apply pre-exisiting scripts to our new project.  
 
-Additionally, we will start looking at a new programming language paradigm called Scratch.  Invented at MIT (that little 'ole place), Scratch allows you to create some entertaining programs in a highly visible and interactive way.  You can see your progress quickly, and it makes the whole experience a lot of fun.  We will start on the basics, and then we will extend it.
+Our goal is to apply what we learned last week to something new.
+
+Goals:
+
+1. Create an empty 2D project
+2. Review the Unity interface
+3. Access the Unity Asset Store
+4. Add new assets to the scene
+5. Apply existing scripts to new assets
