--- a/modules/week-3/_posts/2017-01-16-homework.md
+++ b/modules/week-3/_posts/2017-01-16-homework.md
@@ -1,20 +1,17 @@
 ---
 title: Homework
 module: 3
+jotted: false
 ---
 
-# Homework
+# Week 2 Homework
 
-## Putting it all together
+I know this is somewhat of a review for you, but it is to show that you can apply the same scripts from before (or ones that you create) to new projects.  It is meant to indicate that you do not need to recreate everything from scratch everytime you start a new project.
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/wCFzZN5p3VI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+For your homework this week, you will
 
-Yes, the time has come for you to create a small game in Scratch.  I know you can do it. I might take a little Grit, I believe in you.  You have the freedom to make your game however you would like, but here is what I would like to see:
-
-1. At least two characters.
-2. Each character should have at least three costumes.
-3. At least two backgrounds.
-4. There should be broadcasting.
-5. There should be a variable or more.
-6. There should be a background sound or otherwise.
-7. You should upload your .sb3 file to your repository and send in your link.
+1. Create a new Project
+2. Add new assets
+3. Apply existing scripts to assets
+4. Provide a document explaining how to play the game.
+5. Send all these files to your GitHub Repository and submit your link to Moodle.
