--- a/modules/week-1/_posts/2017-01-09-homework.md
+++ b/modules/week-1/_posts/2017-01-09-homework.md
@@ -7,9 +7,9 @@ module: 1
 
 <div class="embed-responsive embed-responsive-16by9"><iframe class="embed-responsive-item" src="" frameborder="0" allowfullscreen></iframe></div>
 
-In this activity, you are going to experiment with your space game. Your main objective is to avoid the obstacles while attempting to collect all the collectables before you run out of health.
-1.	Add a background. It’s up to you what you put on there.
-2.	If you are hit, you should lose health. If you run out of health, the game should be over. You are to create at least five obstacles and they should either chase or patrol.
-3.	You should also have collectibles.  Each time you collect something your point total should increase.
-4.	There should be at least 5 collectibles as well.
-5.	If you collect everything, you should win.
+This week is just making sure you have Unity/Unity Hub installed and have the Unity Playground Assets added to your first project.  
+
+1. Create a project.
+2. Add Unity Playground.
+3. Submit all your files into GitHub.
+4. Submit GitHub link into Moodle.
