--- a/modules/week-2/_posts/2017-01-01-overview.md
+++ b/modules/week-2/_posts/2017-01-01-overview.md
@@ -5,16 +5,4 @@ module: 2
 
 # Week 2 Overview
 
-## Design a new Game
-
-This week we are going to look at how to create a new game from scratch. We will look at the Unity interface, revisit the Unity Asset store, and apply pre-exisiting scripts to our new project.  
-
-Our goal is to apply what we learned last week to something new.
-
-Goals:
-
-1. Create an empty 2D project
-2. Review the Unity interface
-3. Access the Unity Asset Store
-4. Add new assets to the scene
-5. Apply existing scripts to new assets
+This week, we are going to actually work on creating our first game.  We will use the Unity Playground to help us get started and design a fully functional game.  You won't have to worry about programming, just drag and drop.  Then, we will show each other the games we created.
