created framework for week 4

--- a/modules/week-4/_posts/2017-02-01-homework.md
+++ b/modules/week-4/_posts/2017-02-01-homework.md
@@ -6,23 +6,14 @@ jotted: true
 
 # Homework
 
-In this homework, you have three things to add which are listed below.
+In this homework, you are going to create a small RPG game using the Creator Kit: RPG assets.  You can import and use your assets as well.
 
-Specifics:
+1. Create a simple RPG game using the Tile Palette.
 
-1. Upload your short paper on who influenced you growing up or even now to your respository.
-2. Upload a link to your App to your respository.
-   1. It can be a game
-   2. Choose your adventure
-   3. A question and answer
-   4. A canvas drawing app, etc.
-3. Upload a link to your Play Lab game to your repository.
-   1. Make sure you have at least two characters
-   2. Change the background
-   3. Some interaction between the characters
-   4. A scoring system if it's a collectible or avoidance game
-   5. Allow the end-user to move at least one character.
-4. Submit the feedback you got on your game and application to your repository 
-5. Submit your repository link into Moodle.
+2. Include at least 3 NPC characters with whom you can talk.
 
-<iframe width="560" height="315" src="https://umontana.zoom.us/recording/play/sDxdJrXhh_GUvvlccLkC9hzhCwvDGGgpkydyeLyRzVBTtTfVNQSzSyjLWphIY3zN?continueMode=true" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+3. Create at least 2 quests to be completed.
+
+4. Upload all your files to GitHub.
+
+5. Submit GitHub link to Moodle.
