update text in homework

--- a/modules/week-4/_posts/2017-02-01-homework.md
+++ b/modules/week-4/_posts/2017-02-01-homework.md
@@ -8,12 +8,8 @@ jotted: true
 
 In this homework, you are going to create a small RPG game using the Creator Kit: RPG assets.  You can import and use your assets as well.
 
-1. Create a simple RPG game using the Tile Palette.
-
-2. Include at least 3 NPC characters with whom you can talk.
-
-3. Create at least 2 quests to be completed.
-
-4. Upload all your files to GitHub.
-
-5. Submit GitHub link to Moodle.
+1.	Create a simple RPG game using the Tile Palette.
+2.	Include at least 3 NPC characters with whom you can talk.
+3.	Create at least two quests to be completed.
+4.	Upload all your files to GitHub.
+5.	Submit the GitHub link to Moodle.
