updated text to add Unity 2D Game Kit

--- a/modules/week-5/_posts/2017-03-20-homework.md
+++ b/modules/week-5/_posts/2017-03-20-homework.md
@@ -4,18 +4,16 @@ module: 5
 jotted: true
 ---
 
-# HW 5 
+# Homework 5 
 
-In this homework, let's take Alice for a spin and see what we can do.
+In this homework, we are going to use the Unity 2D Game Kit to design a game.
 
-1. Create an Alice application
-2. It can be a game or a story
-3. Must have some scenery that helps tell the story
-4. Must have movement with multiple characters - at least five characters
-5. Must have camera movements
-6. Must have some event handling via keyboard, mouse, or timing
-7. Must have some collision detection
-8. Save your file and upload your .a3p to your GitHub repository.
+1. Create Unity 2D Game using the Game Kit
+2. It should be a platformer type game.
+3. Add doors
+4. Add movable objects
+5. Add enemies that cause damage
+6. Add obstacles
+7. Add teleportation
+8. Upload all files to your GitHub repository.
 9. Turn in your link to Moodle.
-
-<a href="https://umontana.zoom.us/recording/share/elmmV7Erfs1MVA8q-soEtYMUOnMOirCXR4bkhuz2AAmwIumekTziMw" target="_new" style="font-family:Ariel; font-size:32px;">Click here for this section's Video</a>
