updated the text for week 6 and 7

--- a/modules/week-6/_posts/2017-01-25-homework.md
+++ b/modules/week-6/_posts/2017-01-25-homework.md
@@ -6,20 +6,18 @@ jotted: true
 
 # Homework 6
 
-In this homework, you are going to create a couple of HTML pages.  Hang onto them as you will add to them over the next couple of weeks.
+In this homework, you are going to create reflect on the scriping that was done and make some modifications to the world that you created so far.  Can you add a second character?  Can they move and interact in the world as well?  What you want them to move randomly?
 
-## Specification
+## Specifications
 
-1. Create a "homepage."
-2. On the home page, create a list of your favorite hobbies.
-3. Create a list of your favorite restaurants with links.
-4. Create an ordered list of your favorite websites, including their websites.
-5. Create a second page.
-6. On the second page, write a short story and include some of your artwork too.
-7. On the homepage, make sure there is a link to your second page.
-8.  Create a third page with a "contact us" information on it.  It should contain a form asking for their name, email address, and accept terms of agreement (yes or no question).
-9.  Turn in your link to your GitHub URL
-10. This time, create a short video showing off your website as well.  Turn in that link too.
+1. Go through the Ruby's Adventure Tutorial
+2. Modify the result so that another character is controlled by the player.
+3. Modify the game so that an NPC moves randomly.
+4. Write up a short (1/2 page to 1 page) paper on the code that you wrote. 
+   1. What is the difference between Start and Update?
+   2. What are variables?
+   3. How do you controller the characters with the keyboard?
+   4. How do you prevent the user from walking through items?
+5. Turn in your project into GitHub
+6. Submit your GitHub link into Moodle.
 
-<!-- video -->
-<a href="https://umontana.zoom.us/recording/play/SZ2PK8JMlWqNcKljUyUqxmYSxygkae_QbXy6qTisTPQvEHQZqVwt4umW4EekdVYp?continueMode=true" target="_new" style="font-family:Ariel; font-size:32px;">Click here for this section's Video</a>
