--- a/modules/week-7/_posts/2017-02-10-homework.md
+++ b/modules/week-7/_posts/2017-02-10-homework.md
@@ -6,17 +6,12 @@ jotted: true
 
 # Homework
 
-In this homework, you are going to style your HTML pages from Homework 6.
+In this homework, you are going to finish the Ruby's Adventure tutorial and then modify it with your animations, HUD changes, and audio files.
 
-1. Must use at least two inline styles.
-2. Must use embedded styles on a page affecting at least three tags.
-3. Must use an external style sheet.
-4. Must class selectors in your external style sheet that affect at least two tags in your page
-5. Must have id selectors in your external style sheet that affect at least two tags in your page
-6. Your contact us page must use either a CDN reference to Bootstrap (or another external CSS library) or a downloaded (local) version.
-7. Must add a background image using CSS to your second page - the one with the story
-8. Make sure you have a link to your video showing off your website.  It doesn't have to be online (through GitHub). Just open your files locally (on your computer) and show them that way. Use Zoom or some other screen capturing software
-9. Upload your files to your GitHub repository and turn in your link.
-
-<a href="https://umontana.zoom.us/recording/play/n3vEfyKoMebEnZ6vhAucRfGGlOBbl4p8r5LqL3kCtznY8yY1czAhYLKerkyVrQ9h?continueMode=true" target="_new" style="font-family:Ariel; font-size:32px;">Click here for this section's Video</a>
-
+1. Complete the Ruby's Adventure tutorial.
+2. Create and add at least two animations.
+3. Customize the HUD.
+4. Add and apply your audio.
+5. Build the application to an exe.
+6. Upload your files to your GitHub repository
+7. Submit your GitHub link to Moodle.
