--- a/modules/week-1/_posts/2017-01-09-homework.md
+++ b/modules/week-1/_posts/2017-01-09-homework.md
@@ -5,11 +5,10 @@ module: 1
 
 # Week 1 Homework
 
-<div class="embed-responsive embed-responsive-16by9"><iframe class="embed-responsive-item" src="" frameborder="0" allowfullscreen></iframe></div>
-
 This week is just making sure you have Unity/Unity Hub installed and have the Unity Playground Assets added to your first project.  
 
 1. Create a project.
 2. Add Unity Playground.
 3. Submit all your files into GitHub.
+4. Add a screenshot of your completed Syllabus Quiz to your repository.
 4. Submit GitHub link into Moodle.
