--- a/modules/week-2/_posts/2017-01-10-homework.md
+++ b/modules/week-2/_posts/2017-01-10-homework.md
@@ -5,7 +5,7 @@ module: 2
 
 # Week 2 Homework
 
-<div class="embed-responsive embed-responsive-16by9"><iframe class="embed-responsive-item" src="" frameborder="0" allowfullscreen></iframe></div>
+<p><a href="//" data-lity>Homework Video (need something)</a></p>
 
 In this activity, you are going to experiment with your space game. Your main objective is to avoid the obstacles while attempting to collect all the collectables before you run out of health.
 1.	Add a background. It’s up to you what you put on there.
