updated the to do for the health

--- a/modules/week-2/_posts/2017-01-04-health.md
+++ b/modules/week-2/_posts/2017-01-04-health.md
@@ -33,3 +33,10 @@ The health went down, but if you hit it twice, the health goes down again.
 
 2. Rerun it and see what happens. Did it work better? Great!
 
+### To Do 
+
+1. What happens if you leave it unnamed?
+2. What happens if you use a different name?
+3. Discuss with a classmate your findings.
+4.  Why is it important to have them named?
+
