--- a/modules/week-2/_posts/2017-01-01-overview.md
+++ b/modules/week-2/_posts/2017-01-01-overview.md
@@ -5,4 +5,8 @@ module: 2
 
 # Week 2 Overview
 
+Let's review and make sure you were able to get everything up and running.  Open Unity -> Open and your Playground Project.  Were there any issues getting it installed? Finding it in the Asset store?  What other things did you install?
+Take 10 minutes to discuss this in class.
+
+
 This week, we are going to actually work on creating our first game.  We will use the Unity Playground to help us get started and design a fully functional game.  You won't have to worry about programming, just drag and drop.  Then, we will show each other the games we created.
