--- a/modules/week-2/_posts/2017-01-04-health.md
+++ b/modules/week-2/_posts/2017-01-04-health.md
@@ -35,8 +35,9 @@ The health went down, but if you hit it twice, the health goes down again.
 
 ### To Do 
 
-1. What happens if you leave it unnamed?
-2. What happens if you use a different name?
-3. Discuss with a classmate your findings.
-4.  Why is it important to have them named?
+1. Think for 2-3 minutes about the importance of health and heads up displays.
+2. Spend 2-3 minutes determining what happens if you leave the player and obstracle unnamed.
+3. Spend 2-3 minutes changing the name of the player and obstacle to something else.
+4. Spend 5 minutes discussing with a classmate your findings.  Why are the names important here?  *Hint* You might have to look at the code.
+5.  Discuss with the class your findings.
 
