--- a/modules/week-3/_posts/2017-01-16-homework.md
+++ b/modules/week-3/_posts/2017-01-16-homework.md
@@ -13,5 +13,6 @@ For your homework this week, you will
 1. Create a new Project
 2. Add new assets
 3. Apply existing scripts to assets
-4. Provide a document explaining how to play the game.
-5. Send all these files to your GitHub Repository and submit your link to Moodle.
+4. Create a simple custom script to your game
+5. Provide a document explaining how to play the game.
+6. Send all these files to your GitHub Repository and submit your link to Moodle.
