--- a/modules/week-4/_posts/2017-01-07-add-quest.md
+++ b/modules/week-4/_posts/2017-01-07-add-quest.md
@@ -6,3 +6,4 @@ jotted: true
 
 # Add a Quest
 
+One of the things that make games more interesting are goals or in this case quests.  Let's think about what kind of quests might make most sense here.
