updated this week's information

--- a/modules/week-5/_posts/2017-03-20-homework.md
+++ b/modules/week-5/_posts/2017-03-20-homework.md
@@ -7,6 +7,14 @@ jotted: true
 # Homework 5 
 
 In this homework, we are going to use the Unity 2D Game Kit to design a game.
+In this homework, you are going to create a small RPG game using the Creator Kit: RPG assets.  You can import and use your assets as well.
+
+1. Create a simple RPG game using the Tile Palette.
+2. Include at least 3 NPC characters with whom you can talk.
+3. Create at least two quests to be completed
+4. Add a story and a linked story to your game.
+4. Upload all your files to GitHub.
+5. Submit the GitHub link to Moodle.
 
 1. Create Unity 2D Game using the Game Kit
 2. It should be a platformer type game.
