updated the flow

--- a/modules/week-7/_posts/2017-01-01-overview.md
+++ b/modules/week-7/_posts/2017-01-01-overview.md
@@ -1,9 +1,10 @@
 ---
 title: Weekly Overview
 module: 7
-jotted: false
 ---
 
-# Week 7 Overview
+# Week 7 Overview <br />
 
-This week is a continuation of last week, but with a focus on animations, camers and audio.
+This week we are going explore another tutorial that will introduce us to scripting among other aspects of game design and development.
+
+First, download the Ruby's Adventure from the Asset Store.
