--- a/modules/week-5/_posts/2017-01-01-overview.md
+++ b/modules/week-5/_posts/2017-01-01-overview.md
@@ -3,7 +3,7 @@ title: Weekly Overview
 module: 5
 ---
 
-# Week 5 Overview <br />
+# Week 5 Overview
 
 
-This week, we will use the Unity 2D Game Kit to see how to design even more complex games using existing scripts and assets.  Let's look we can do and extend it even further.  This kit gives us the ability to create multiple scenes and adds menus as well.
+This week we are going to continue through the Creator Kit - RPG.  
