updated files for rpg quests

--- a/modules/week-5/_posts/2017-01-07-add-quest.md
+++ b/modules/week-5/_posts/2017-01-07-add-quest.md
@@ -14,7 +14,7 @@ One of the things that make games more interesting are goals or in this case que
 
 2.  Right-click and select **Create Empty** from the contextual menu. This will create a child GameObject.
 
-3. Right-click the new **GameObject** and select **Rename**. Call this **GameObject Quest**.
+3. Right-click the new **GameObject** and select **Rename**. Call this **Quest GameObject**.
 This GameObject will help you keep your quest organised. 
 
 4.  In the **Inspector**, click **Add Component**.
@@ -115,17 +115,17 @@ To add a reward to your quest:
 
 4.  In the **Inspector**, enable the **checkbox** in the header of the **Animator** component. This will animate the chicken.
 
-5.  In the **Hierarchy**, right-click on the reward item **GameObject** and select **Rename**. Call it **Chicken**. 
+5.  In the **Hierarchy**, right-click on the reward item **GameObject** and select **Rename**. Call it **Chicken Reward**. 
 
 6.  In the **Hierarchy**, select the **Quest GameObject**. Expand the **Reward Items** section.
 
 7.  Set the **Size parameter to 1**; a new field named **Element 0** will appear beneath. 
 
-8.  Drag your **Chicken GameObject** from the **Hierarchy** to the **Element 0** field. 
+8.  Drag your **Chicken Reward** from the **Hierarchy** to the **Element 0** field. 
 
-9.  In the **Hierarchy**, select the **Chicken GameObject**. In the **Inspector**, disable the checkbox in the **Chicken GameObject** header.
+9.  In the **Hierarchy**, select the **Chicken Reward**. In the **Inspector**, disable the checkbox in the **Chicken Reward** header.
 
-This deactivates the **Chicken GameObject**, and will stop the player from collecting it before it has been given as a reward.
+This deactivates the **Chicken Reward**, and will stop the player from collecting it before it has been given as a reward.
 10.  Save the **Scene**. 
 
 Now enter Play Mode and test the changes you’ve made to your game!
