--- a/modules/week-7/_posts/2017-01-01-overview.md
+++ b/modules/week-7/_posts/2017-01-01-overview.md
@@ -5,6 +5,6 @@ module: 7
 
 # Week 7 Overview <br />
 
-This week we are going explore another tutorial that will introduce us to scripting among other aspects of game design and development.
+This week we are going explore another tutorial that will reiterate the idea of scripting and help us learn how to customize scripts even more.
 
 First, download the Ruby's Adventure from the Asset Store.
