--- a/modules/week-7/_posts/2017-01-25-homework.md
+++ b/modules/week-7/_posts/2017-01-25-homework.md
@@ -4,20 +4,18 @@ module: 7
 jotted: true
 ---
 
-# Homework 6
+# Homework
 
-In this homework, you are going to create reflect on the scriping that was done and make some modifications to the world that you created so far.  Can you add a second character?  Can they move and interact in the world as well?  What you want them to move randomly?
+In this homework, you are going to create reflect on the scripting that was done and make some modifications to the world that you created so far.
 
 ## Specifications
 
-1. Go through the Ruby's Adventure Tutorial
-2. Modify the result so that another character is controlled by the player.
-3. Modify the game so that an NPC moves randomly.
-4. Write up a short (1/2 page to 1 page) paper on the code that you wrote. 
-   1. What is the difference between Start and Update?
-   2. What are variables?
-   3. How do you controller the characters with the keyboard?
-   4. How do you prevent the user from walking through items?
-5. Turn in your project into GitHub
-6. Submit your GitHub link into Moodle.
+1. Ensure that you are able to get the main sections for this week.
+2. Add more decorations.
+3. Modify the game with your tilemap.
+4. Add different enemies with different damage amounts.
+5. Add at least two different animations.
+6. Write up a short (1/2 page to 1 page) paper on your experience. 
+7. Turn in your project into GitHub
+8. Submit your GitHub link into Moodle.
 
