--- a/modules/week-9/_posts/2017-01-01-overview.md
+++ b/modules/week-9/_posts/2017-01-01-overview.md
@@ -6,4 +6,4 @@ jotted: false
 
 # Week 7 Overview
 
-This week is a continuation of last week, but with a focus on animations, camers and audio.
+This week is a continuation of last week, but with a focus on animations, projectiles, cameras and audio.
