--- a/modules/week-9/_posts/2017-02-10-homework.md
+++ b/modules/week-9/_posts/2017-02-10-homework.md
@@ -9,10 +9,11 @@ jotted: true
 In this homework, you are going to finish the tutorial and then modify it with your animations, HUD changes, and audio files.
 
 1. Complete the sections.
+2. Add at least two different animations.
 3. Add a different the projectiles.
 4. Work with the camera and cinemachine.
-3. Customize the HUD.
-4. Add and apply audio.
-5. Build the application to an exe.
-6. Upload your files to your GitHub repository
-7. Submit your GitHub link to Moodle.
+5. Customize the HUD.
+6. Add and apply audio.
+7. Build the application to an exe.
+8. Upload your files to your GitHub repository
+9. Submit your GitHub link to Moodle.
