--- a/modules/week-10/_posts/2017-01-01-overview.md
+++ b/modules/week-10/_posts/2017-01-01-overview.md
@@ -8,8 +8,4 @@ module: 10
 
 <br />
 
-This week is all about movement.  Let's make things move in p5.js.  To make shapes move, we must know how to implement a few things in p5.  At first glance, this might seem a little daunting. However, the best part is that you have already done a number of these functions previously.  I know you are going to excel at this too.
-
-With motion, that allows us to be even more creative than we were last week.  We will stick with simple shapes for now to get the extra practice.  Remember, everything we do each week should build on the work done from the prior weeks.
-
-Finally, our discussion question for the week is all about creating art and gaming.  Is there a relationship between the two? What is the same?  What is different?  Is the creative process the same or different? Let's hear your thoughts!  
+This week is all about finishing and polishing a game before getting it ready for distribution.  I want you to also think about what it will be like to get other to play your game and provide feedback.
