--- a/modules/week-10/_posts/2017-02-30-homework.md
+++ b/modules/week-10/_posts/2017-02-30-homework.md
@@ -6,22 +6,14 @@ jotted: true
 
 # Homework
 
-This week, you are going to animate your self-portrait.  Now that you know how to make objects move back and forth, choose a few simple shapes to go back and forth along the x-axis.  Also, select a couple of your shapes to move along the y-axis, and at least one simple shape to move using both the x and y-axis.  Finally, make the title of your portrait get bigger five times and then smaller five times.  Repeat that forever.
+This week, you will complete the project by working with the heads up display (HUD), add some dialog, audio and then be able to compile it so someone else can play it.
 
 Specifics:
 
-1. Make at least two simple shapes in your self-portrait move back and forth along the x-axis.
-2. Make at least two simple shapes in your self-portrait move back and forth along the y-axis.
-3. Have the shapes move at different random speeds.
-4. Make at least one shape move back and forth along the x and y-axis (diagonally).
-5. Make the title of your self-portrait get larger five times and then get smaller five times. Repeat forever.
-6. Create a short video talking about your project.
-7. Upload your project and video to GitHub and turn your link into Moodle.
+1. Customize the HUD.
+2. Implement some dialog raycasting. 
+3. Add and apply audio.
+4. Build the application to an exe.
+5. Have another person play your game and get feedback.
+6. Upload your project and video to GitHub and turn your link into Moodle.
 
-**Want something extra to do?**
-
-1. Change the colors of your shapes every time they hit the wall.
-2. Change your name text so that it moves in a square pattern.
-3. Make your head get bigger and then smaller continuously.
-
-<a href="https://umontana.zoom.us/recording/share/5KNo1edU0MSx3DCik7s-8gFIIGWfJFqMBwsNCjGCQ2Y" target="_new" style="font-family:Ariel; font-size:32px;">Click here for this section's Video</a>
