updating the activity for 10

--- a/modules/week-10/_posts/2017-01-01-overview.md
+++ b/modules/week-10/_posts/2017-01-01-overview.md
@@ -8,4 +8,4 @@ module: 10
 
 <br />
 
-This week is all about finishing and polishing a game before getting it ready for distribution.  I want you to also think about what it will be like to get other to play your game and provide feedback.
+This week is an introduction to the 3D world in Unity.  We are going to start with the 3D Game Kit and create a world from there.
