--- a/modules/week-10/_posts/2017-02-30-homework.md
+++ b/modules/week-10/_posts/2017-02-30-homework.md
@@ -6,14 +6,14 @@ jotted: true
 
 # Homework
 
-This week, you will complete the project by working with the heads up display (HUD), add some dialog, audio and then be able to compile it so someone else can play it.
+This week, let's create a scene using the 3D Game Kit. You are going to create level with a fully functioning environment, enemies, etc.
 
 Specifics:
 
-1. Customize the HUD.
-2. Implement some dialog raycasting. 
-3. Add and apply audio.
-4. Build the application to an exe.
-5. Have another person play your game and get feedback.
+1. Create a level using the 3D Game Kit.
+2. Make sure you have basic terrain, vegitation, rocks, etc.
+3. Include platforms.
+4. Include enemies.
+5. Build it and have someone else play it and give you feedback. 
 6. Upload your project and video to GitHub and turn your link into Moodle.
 
