--- a/modules/week-11/_posts/2017-01-01-overview.md
+++ b/modules/week-11/_posts/2017-01-01-overview.md
@@ -5,8 +5,4 @@ module: 11
 
 # Week 11 Overview
 
-Welcome to Week 11!  This week we will review control structures, loops, variables, and then integrate some movement based on events.  The two main functions are mouse events and keyboard events.
-
-We are going to let go of our self-portrait.  I hope you won't be sad, but let's make something new so that you have another example from which you can draw.  It will allow us to review what we did and build on it.
-
-As for our discussion topic this week, we will talk about using/leveraging other people's work.  What are the rules here?  When/how can we use someone else's work?  When is it not okay? Do we need to create everything from scratch?  
+Welcome to Week 11!  This week we will look at how to set up a scene from scratch in 3D and make things interact. You already know how to do most of this from 2D, but now we are goimg to apply it to 3D.
