updated the homework and conclusions

--- a/modules/week-11/_posts/2017-02-10-homework.md
+++ b/modules/week-11/_posts/2017-02-10-homework.md
@@ -6,21 +6,14 @@ jotted: false
 
 # Homework
 
-For this homework, you are going to create a spore-like game.  It should be made up of a bunch of simple shapes (they can be the same or different).  After you place them on the screen, you should move them around the screen randomly. If they leave the screen, you should have them go to the other side of the screen.  You should also have a way to place an obstacle onto the screen with your mouse.  Once the player moves off the screen through the exit, you should display a message that says "You Win!".  Don't worry about any collisions.
+For this homework, you are going to change the original program so that it becomes a maze. You should try to get to the end point and collect a prize. Once the prize is collected, it should say, you win. If you run into an enemy, you should die.
 
 ## Specifications
 
-1. Create a canvas
+1. Create a maze.
 3. Create a player.
-4. Move the player using the keyboard.
-5. Place multiple obstacles (at least 2) of different sizes and colors on the screen.
-6. Move the obstacles around randomly around the screen.  If they leave the screen, have them come back on the other side.
-7. Clicking the mouse adds a non-moving obstacle to the screen.
-8. Create an exit
-9. If the player gets to the exit, display a message on the screen that says you win.
-10. Must use if/else, if and else if statements.
-11. Must use logical operators. (at least one of them)
-12. Ignore all collisions.
-
-
-<a href="https://umontana.zoom.us/recording/share/ZbyMxWbARyyOP6gm3aJJq1buRFF3DoUdgTkNU_zmaKuwIumekTziMw" target="_new" style="font-family:Ariel; font-size:32px;">Click here for this section's Video</a>
+4. Move the player through the maze.
+5. Place multiple enemy throughout the maze.
+6. Place a treasure at the end of the maze.
+7. Determine if they won or lost.
+8. Upload all your files to GitHub and turn your GitHub link into Moodle.
