updated the week 12

--- a/modules/week-12/_posts/2017-01-01-overview.md
+++ b/modules/week-12/_posts/2017-01-01-overview.md
@@ -10,6 +10,5 @@ jotted: false
 <br />
 
 
-Okay, this week will focus primarily on functions.  This week will not be substantial, as it's a short week.  We will focus on creating, using, and reusing functions.  Ready?  Let's go!
+Okay, this week we are going to create a 3D game from scratch using assets from the store.  We are going to use free assets to create an environment, add a player and then have interactions where the player collects items and then a new item is generate.  You are going to add more intrique by having a countdown timer and items only appear after certain items are collected.
 
-For the discussion, we are going to focus on the culture around programming and how can we change that.  In my world, I don't want programming, gaming, and design to be a male-dominated experience any longer.  What I love about this class is that we have a lot of diversity, and I want to keep it that way.  My main question is, how do you think we are going to change it?  I am interested in your ideas.
