--- a/modules/week-12/_posts/2017-01-30-homework.md
+++ b/modules/week-12/_posts/2017-01-30-homework.md
@@ -6,20 +6,20 @@ jotted: false
 
 # Homework
 
-For this homework, you are going to alter your spore-like game.  You are going to create some functions and call them. Again, don't worry about collisions.
+For this homework, turn in your working 3D game. It should be an somewhat of a collection type game.  You can add animations if you want, but they are not required.
 
 ## Specifications
 
-1. Create a function that creates a player.
-2. Create a function to move the player using the keyboard.
-3. Create a function that draws the circle to the screen when pressing the mouse.
-4. Create a function that creates multiple obstacles of different sizes and colors on the screen (okay if you still have only 2).
-5. Create different functions to move each of the obstacles around randomly around the screen.  If they leave the screen, have them come back on the other side.
-6. Create a function to generate the exit
-7. Create a function to display the "You win" message.
-8. If the player gets to the exit, call the "you win" function.
-9. Your draw() function should contain only function calls along with the background function.
-10. Ignore all collisions.
+1. There should be an environment.
+2. There should be a character with movement.
+3. There should be collectible items.
+4. There should be a way to determine if all the items were collected in order.
+5. There should be a final item to be collected.
+6. A final message should be displayed if the final items is collected.
+7. Turn everything into Box and submit a link.
 
-<a href="https://umontana.zoom.us/recording/play/Cb5f7zBVCiaR0ma2EGaXPXzaU7Ibrcas5WpMuB1NO3Ulw_ooc6euinr7A0BZNU7i?continueMode=true
-" target="_new" style="font-family:Ariel; font-size:32px;">Click here for this section's Video</a>
+Looking for something extra to do?
+
+1. Create animations for your character. Use the Animator/Blend Tree.
+2. Create enemies that chase the character.
+3. Create a countdown timer.
